Fixed body spacing.

--- a/cris/style.css
+++ b/cris/style.css
@@ -5,7 +5,7 @@ body {
 }
 main {
   margin-bottom: 120px;
-  margin-top: 60px;
+  margin-top: 70px;
   overflow-y: auto;
   position: relative;
   z-index: 1;
